GT-3354: Removing some Guava